<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/iv_icon_tvshow"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            app:srcCompat="@drawable/ic_menu_movies" />

        <TextView
            android:id="@+id/tv_dtl_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/title_movie"
            android:textAllCaps="true"
            android:textColor="@color/colorTitle"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_icon_tvshow"
            app:layout_constraintTop_toTopOf="@+id/iv_icon_tvshow" />

        <TextView
            android:id="@+id/tv_dtl_movie_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            app:layout_constraintStart_toStartOf="@+id/tv_dtl_movie_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_dtl_movie_title" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/brrHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="tv_dtl_movie_genre,tv_dtl_movie_title,iv_icon_tvshow"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="76dp" />

        <View
            android:id="@+id/v_separator_header"
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            android:layout_marginTop="8dp"
            android:background="#FFDFB0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/brrHeader" />

        <!--POSTER-->
        <ImageView
            android:id="@+id/iv_dtl_movie_poster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/poster"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v_separator_header"
            app:layout_constraintWidth_percent="0.5"
            tools:srcCompat="@drawable/ic_loading_poster" />

        <!--LABEL RELEASE-->
        <TextView
            android:id="@+id/tv_lbl_dtl_movie_releasedate"
            style="@style/labelDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/release_date"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iv_dtl_movie_poster"
            app:layout_constraintTop_toTopOf="@+id/iv_dtl_movie_poster" />

        <!--RELEASE-->
        <TextView
            android:id="@+id/tv_dtl_movie_releasedate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            app:layout_constraintStart_toStartOf="@+id/tv_lbl_dtl_movie_releasedate"
            app:layout_constraintTop_toBottomOf="@+id/tv_lbl_dtl_movie_releasedate" />


        <!--LABEL PUBLISHER-->
        <TextView
            android:id="@+id/tv_lbl_dtl_movie_popularity"
            style="@style/labelDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/popularity"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_dtl_movie_releasedate"
            app:layout_constraintTop_toBottomOf="@+id/tv_dtl_movie_releasedate" />

        <TextView
            android:id="@+id/tv_dtl_movie_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popularity"
            app:layout_constraintStart_toStartOf="@+id/tv_lbl_dtl_movie_popularity"
            app:layout_constraintTop_toBottomOf="@+id/tv_lbl_dtl_movie_popularity" />

        <TextView
            android:id="@+id/tv_lbl_dtl_movie_votecount"
            style="@style/labelDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/vote_count"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_dtl_movie_popularity"
            app:layout_constraintTop_toBottomOf="@+id/tv_dtl_movie_popularity" />

        <TextView
            android:id="@+id/tv_dtl_movie_votecount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vote_count"
            app:layout_constraintStart_toStartOf="@+id/tv_lbl_dtl_movie_votecount"
            app:layout_constraintTop_toBottomOf="@+id/tv_lbl_dtl_movie_votecount" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/brrPoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="iv_dtl_movie_poster,tv_dtl_movie_votecount"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="278dp" />

        <TextView
            android:id="@+id/tv_lbl_dtl_movie_overview"
            style="@style/labelDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/overview"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/brrPoster" />

        <TextView
            android:id="@+id/tv_dtl_movie_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/overview"
            app:layout_constraintStart_toStartOf="@+id/tv_lbl_dtl_movie_overview"
            app:layout_constraintTop_toBottomOf="@+id/tv_lbl_dtl_movie_overview" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>